inspectah-web/tests/snapshots/fixture_structure_test__post_tarball_sensitive_required.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "message": "Export contains sensitive data. Set X-Acknowledge-Sensitive header to proceed.",
  "sensitive_files": [
    "/etc/shadow"
  ]
}
