inspectah-web/tests/snapshots/fixture_structure_test__single_host_health.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "completeness": "full",
  "fleet": null,
  "host": {
    "hostname": "test-host-01.example.com",
    "os_id": "rhel",
    "os_name": "Red Hat Enterprise Linux",
    "os_version": "9.4",
    "schema_version": 3,
    "system_type": "package"
  },
  "policy": {
    "distro_repos": [
      "rhel-9-for-x86_64-baseos-rpms",
      "rhel-9-for-x86_64-appstream-rpms"
    ]
  },
  "session_is_sensitive": false,
  "status": "ok"
}
