inspectah-web/tests/snapshots/fixture_structure_test__single_host_user_preview_redacted.snap
---
source: inspectah-web/tests/fixture_structure_test.rs
expression: value
---
{
  "blueprint_toml": "# Blueprint user configuration\n# Generated by inspectah\n# NOTE: Sensitive content redacted. Use --reveal to view.\n\n[[customizations.user]]\nname = \"testuser\"\nuid = 1000\ngid = 1000\nshell = \"/bin/bash\"\nhome = \"/home/testuser\"\ngroups = [\"wheel\", \"testuser\"]\n# Password hash redacted\n",
  "kickstart": "# Kickstart user configuration\n# Generated by inspectah\n# NOTE: Sensitive content redacted. Use --reveal to view.\n\nuser --name=testuser --uid=1000 --gid=1000 --shell=/bin/bash --homedir=/home/testuser --groups=wheel,testuser\n# Password hash redacted\n",
  "sensitive": true
}
